fixed missing inputs in swagger defn, configured logging STDOUT
